# codecharacter-simulator-2018

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  clang-format.cmake  docker_build.sh
docker/compiler/: Dockerfile  compiler.sh
docker/runner/: Dockerfile  runner.sh
src/constants/: CMakeLists.txt
src/constants/include/constants/: constants.h  driver.h  map.h  money_manager.h  soldier.h  tower.h
src/drivers/: CMakeLists.txt
src/drivers/include/drivers/: main_driver.h  player_driver.h  player_result.h  spin_lock.h  timer.h
src/drivers/include/drivers/shared_memory_utils/: shared_buffer.h  shared_memory_main.h  shared_memory_player.h
src/drivers/src/: main_driver.cpp  player_driver.cpp  timer.cpp
src/drivers/src/shared_memory_utils/: shared_buffer.cpp  shared_memory_main.cpp  shared_memory_player.cpp
src/llvm_pass/: CMakeLists.txt
src/llvm_pass/src/: inst_count_pass.cpp
src/logger/: CMakeLists.txt
src/logger/include/logger/: error_type.h  logger.h
src/logger/include/logger/interfaces/: i_logger.h
src/logger/proto/: game.proto
src/logger/src/: logger.cpp
src/main/: CMakeLists.txt  main.cpp
src/physics/: CMakeLists.txt
src/physics/include/physics/: vector.h
src/physics/src/: vector.cpp
src/player_code/: CMakeLists.txt
src/player_code/include/player_code/: player_code.h
src/player_code/include/player_code/test/: player_code_test_0.h  player_code_test_1.h  player_code_test_2.h
src/player_code/src/: player_code.cpp
src/player_code/test/: player_code_test_0.cpp  player_code_test_1.cpp  player_code_test_2.cpp
src/player_wrapper/: CMakeLists.txt
src/player_wrapper/include/player_wrapper/: player_code_wrapper.h
src/player_wrapper/include/player_wrapper/interfaces/: i_player_code.h
src/player_wrapper/src/: player_code_wrapper.cpp
src/players/: CMakeLists.txt  player.cpp
src/state/: CMakeLists.txt
src/state/include/state/: player_state.h  state.h  utilities.h
src/state/include/state/actor/: actor.h  soldier.fwd.h  soldier.h  soldier_state.h  tower.h
src/state/include/state/actor/mobility_system/: mobility_system.h
src/state/include/state/actor/respawn_system/: respawn_system.h
src/state/include/state/actor/soldier_states/: attack_state.h  dead_state.h  idle_state.h  move_state.h  pursuit_state.h  soldier_state.h
src/state/include/state/interfaces/: i_command_taker.h  i_path_planner.h  i_state.h  i_state_syncer.h  i_updatable.h
src/state/include/state/map/: map.h  map_element.h  terrain_type.h
src/state/include/state/map/interfaces/: i_map.h
src/state/include/state/money_manager/: money_manager.h
src/state/include/state/path_planner/: path_planner.h  simple_path_planner.h
src/state/include/state/state_syncer/: state_syncer.h
src/state/include/state/tower_manager/: tower_manager.h
src/state/src/: state.cpp
src/state/src/actor/: actor.cpp  soldier.cpp  soldier_static_init.cpp  tower.cpp  tower_static_init.cpp
src/state/src/actor/mobility_system/: mobility_system.cpp
src/state/src/actor/respawn_system/: respawn_system.cpp  respawn_system_static_init.cpp
src/state/src/actor/soldier_states/: attack_state.cpp  dead_state.cpp  idle_state.cpp  move_state.cpp  pursuit_state.cpp  soldier_state.cpp
src/state/src/map/: map.cpp  map_element.cpp
src/state/src/money_manager/: money_manager.cpp  money_manager_static_init.cpp
src/state/src/path_planner/: path_planner.cpp  simple_path_planner.cpp
src/state/src/state_syncer/: state_syncer.cpp
src/state/src/tower_manager/: tower_manager.cpp  tower_manager_static_init.cpp
src/tester/: CMakeLists.txt  tester.cpp
test/: CMakeLists.txt  test_main.cpp
test/drivers/: main_driver_test.cpp  main_driver_test_player.cpp  timer_test.cpp
test/drivers/shared_memory/: shm_client.cpp  shm_test.cpp
test/llvm_pass/: llvm_pass_test.cpp
test/logger/: logger_test.cpp
test/logger/mocks/: logger_mock.h
test/state/: map_test.cpp  money_manager_test.cpp  path_planner_test.cpp  simple_path_planner_test.cpp  soldier_test.cpp  state_syncer_test.cpp  state_test.cpp  tower_manager_test.cpp  tower_test.cpp
test/state/mocks/: map_mock.h  path_planner_mock.h  state_mock.h  state_syncer_mock.h
